# MMSD1213_knapsackKbest

./: .gitignore  README.md
knapsackgenerator/: .cproject  .gitignore  .project  Makefile  generator.c  generator.sh
knapsackkbest/: .cproject  .gitignore  .project  CMakeLists.txt  kp_alg.c  problem.txt  test.in  test.txt
knapsackkbest/default_build/eclipse/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
knapsackkbest/default_build/eclipse/src/: Makefile  cmake_install.cmake
knapsackkbest/default_build/eclipse/src/demo/: Makefile  cmake_install.cmake
knapsackkbest/default_build/eclipse/src/tests/: Makefile  cmake_install.cmake
knapsackkbest/default_build/unix/: CMakeCache.txt  KBestConfig.h  Makefile  cmake_install.cmake
knapsackkbest/default_build/unix/src/: Makefile  cmake_install.cmake
knapsackkbest/default_build/unix/src/demo/: Makefile  cmake_install.cmake
knapsackkbest/default_build/unix/src/tests/: Makefile  cmake_install.cmake
knapsackkbest/doc/: doxyconfig
knapsackkbest/doc/report/: main.tex  relazione.tex
knapsackkbest/doc/report/bib/: bib.bib
knapsackkbest/include/: data.h  debug.h  io_utility.h  kbest.h
knapsackkbest/include/kp_alg/: debug.h  kp_alg.h  utility.h
knapsackkbest/problems/: problem.txt  test.txt  test_1.txt  test_10.txt  test_100_1.txt  test_11.txt  test_12.txt  test_13.txt  test_14.txt  test_15.txt  test_16.txt  test_17.txt  test_18.txt  test_19.txt  test_2.txt  test_20.txt  test_3.txt  test_4.txt  test_5.txt  test_500_0.txt  test_500_1.txt  test_500_10.txt  test_500_11.txt  test_500_12.txt  test_500_13.txt  test_500_14.txt  test_500_15.txt  test_500_16.txt  test_500_17.txt  test_500_18.txt  test_500_19.txt  test_500_2.txt  test_500_20.txt  test_500_21.txt  test_500_22.txt  test_500_23.txt  test_500_24.txt  test_500_25.txt  test_500_26.txt  test_500_27.txt  (+14 more)
knapsackkbest/src/: CMakeLists.txt  KBestConfig.h.in  data.h  debug.c  input.c  io_utility.c  kbest.c  kbest.h  kbest_io_utility.c  kbest_io_utility.h  kp_alg.c  kp_alg.h  kp_alg_data.c  main.c  main_debug.c  utility.c  utility.h
knapsackkbest/src/demo/: CMakeLists.txt  get_real_time.c  get_real_time.h  kbest_demo_main.c
knapsackkbest/src/kp_algorithm/: kp_alg_backtrack.c  kp_alg_forward.c  kp_algorithms.h
knapsackkbest/src/kp_model/: kp_inner_model.c  kp_inner_model.h
knapsackkbest/src/tests/: CMakeLists.txt  kp_tests.c  kp_tests.h  test_main.c  test_suite.c  test_suite.h
knapsackkbest/src/utility/: data.h  debug.c  debug.h  utility.c  utility.h
knapsackkbest/tests/: kp_tests.c  kp_tests.h  test_data.c  test_main.c  test_suite.h
